[package]
name = "smr-swap"
version = "0.3.3"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A minimal-locking, high-performance Single-Writer Multiple-Reader swap container using epoch-based memory reclamation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/smr-swap"
homepage = "https://github.com/ShaoG-R/smr-swap"
documentation = "https://docs.rs/smr-swap"
keywords = ["concurrent", "memory-reclamation", "epoch", "swap"]
categories = ["concurrency", "data-structures"]

[dependencies]
swmr-epoch = "0.3.8"

[dev-dependencies]
arc-swap = "1.7"
criterion = { version = "0.7.0", features = ["html_reports"] }
tokio = { version = "1.48", features = ["full"] }

[[bench]]
name = "comparison"
harness = false
