[package]
name = "smr-swap"
version = "0.5.5"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A minimal-locking, high-performance Single-Writer Multiple-Reader swap container using epoch-based memory reclamation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/smr-swap"
homepage = "https://github.com/ShaoG-R/smr-swap"
documentation = "https://docs.rs/smr-swap"
keywords = ["concurrent", "memory-reclamation", "epoch", "swap"]
categories = ["concurrency", "data-structures"]

[dev-dependencies]
arc-swap = "1.7"
criterion = { version = "0.7.0", features = ["html_reports"] }
tokio = { version = "1.48", features = ["full"] }

[features]
loom = ["dep:loom", "swmr-epoch/loom"]

[dependencies]
swmr-epoch = { version = "0.3.12" }
loom = { version = "0.7", optional = true }

[[bench]]
name = "comparison"
harness = false